# ProviderInsurer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
audit_viewer/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
audit_viewer/src/: App.tsx  index.css
data/cases/: case_001.json  case_002.json  case_003.json  case_patientsim_001.json  case_patientsim_002.json
docs/: AUDIT_LOG_SYSTEM.md
examples/: EXPERIMENT_CONFIGS.md  audit_log_example.py  game_demo.py  patient_sim_demo.py  patient_to_concierge_demo.py  rewrite_audit_phase3_prompts.py  run_all_cases.py  run_batch.py  run_case.py  run_copd_grey_zone.py  run_experiment.py  run_pressure.py  run_prisoners_dilemma.py  run_single_case.py  test_copd_grey_zone.py  test_nested_iteration.py
experiments/: run_batch.py  run_experiments.py
experiments/results/: chest_pain_stress_test_001_BASELINE_audit.md  chest_pain_stress_test_001_BASELINE_truth_check.json  chest_pain_stress_test_001_BUREAUCRATIC_audit.md  pilot_results.csv  (+37 more)
outputs/: example_audit_log.json
scripts/: generate_transcript.py  recompute_utilities.py  run_case.py  update_audit_prompts.py
tests/: run_validation.py  test_agents.py  test_apprisemd_case.py  test_audit_log.py  test_audit_oversight_prompts.py  test_infliximab_case.py  test_integration.py  test_new_formats.py  test_oversight.py  test_patient_simulator.py  test_pend_limit.py  test_pend_limit_prompt.py  test_preflight_checks.py  test_single_run.py  test_smoke_interaction.py  test_truth_checker.py  test_worm_cache.py  test_worm_cache_simple.py
(+121 files in other folders)
