[project]
name = "providerinsurer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.0.10",
    "langchain==1.2.10",
    "langchain-openai==1.1.10",
    "langchain-core==1.2.17",
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "black==26.1.0",
    "ruff==0.15.4",
]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "black==26.1.0",
    "ruff==0.15.4",
]
